# mcp-todo

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  PENDING_FEATURES.md  README.md  mcp-todo.container
src/: main.rs
src/db/: export_import.rs  mod.rs  operations.rs  schema.rs
src/models/: mod.rs
src/tools/: archive_task.rs  batch_complete.rs  batch_delete.rs  complete_task.rs  create_recurring_task.rs  create_task.rs  delete_task.rs  export_tasks.rs  get_task.rs  import_tasks.rs  list_archived.rs  list_deleted.rs  list_recurring_tasks.rs  list_tasks.rs  mod.rs  overdue_tasks.rs  purge_deleted.rs  search_tasks.rs  task_stats.rs  unarchive_task.rs  undo_delete.rs  update_task.rs
src/utils/: mod.rs  natural_date.rs  similarity.rs
