[package]
name = "mcp-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio", "hyper-server", "streamable-http"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
futures = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
strsim = "0.11"
async-trait = "0.1"
rust-mcp-schema = "0.10"
